# ai-forge-studio-site

./: .gitignore  BUILD-GUIDE.md  CMakeCache.txt  CPP-Qt-Integration-Guide.md  FEATURES.md  README.md  cuda-integration.html  dashboard.html  download.html  index.html  inference.html  manifest.json  multi-dashboard.html  package-lock.json  package.json  service-worker.js  splash.html  tensorrt.html  vulkan.html
cpp/: CMakeLists.txt  README.md  build.bat  installer.nsi  setup.ps1
cpp-backend/: CMakeLists.txt  README.md  build.bat
cpp-backend/include/: cuda_helper.h  gpu_types.h
cpp-backend/src/: cuda_helper.cu  gpu_info.cpp  gpu_info_json.cpp  trt_inference.cpp  trt_inference_json.cpp
cpp/resources/: app.rc
cpp/shaders/: inference.comp  shader.frag  shader.vert
cpp/src/: main.cpp
cpp/src/gpu/: cuda_inference.cpp  cuda_inference.h  cuda_kernels.cu  tensorrt_engine.cpp  tensorrt_engine.h  vulkan_renderer.cpp  vulkan_renderer.h
cpp/src/monitor/: gpu_monitor.cpp  gpu_monitor.h
css/: dashboard.css  multi-dashboard.css  style.css
electron/: gpu-monitor.js  inference-monitor.js  main.js  preload.js
js/: app.js  code-editor.js  cuda-integration.js  dashboard.js  gpu-dashboard.js  i18n.js  inference-dashboard.js  inference.js  interactive.js  multi-dashboard.js  navigation.js  tensorrt.js
models/: models.json  squeezenet.engine
